--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
 
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/harry_potter_vol_5_e_a_ordem_da_fenix_capa_dura_premium_3631_1_d97f30d2b7d7513f18b2d7fde9e24962.webp"
+          <div class="swiper-slide"><img src="harry_potter_vol_5_e_a_ordem_da_fenix_capa_dura_premium_3631_1_d97f30d2b7d7513f18b2d7fde9e24962.webp"
               alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/82426-7729.webp" alt="Livro sobre liderança em design da alura books">
+          <div class="swiper-slide"><img src="82426-7729.webp" alt="Livro sobre liderança em design da alura books">
           </div>
-          <div class="swiper-slide"><img src="img/jamboeditora-pedrafilosofal.png" alt="Livro sobre javascript assertivo da alurabooks">
+          <div class="swiper-slide"><img src="jamboeditora-pedrafilosofal.png" alt="Livro sobre javascript assertivo da alurabooks">
           </div>
           <div class="swiper-slide"><img src="Guia Front-end.svg" alt="Livro Guia front end"></div>
           <div class="swiper-slide"><img src="Portugol.svg" alt="Livro sobre portugol"></div>
